--- a/.github/workflows/build-rp2040.yml
+++ b/.github/workflows/build-rp2040.yml
@@ -21,6 +21,7 @@ jobs:
           sudo apt install -y --no-install-recommends gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib srecord
       - name: Build
         run: |
+          chmod +x combine_uf2.py
           mkdir build
           cd build
           cmake ..
