--- a/.github/workflows/build-rp2040.yml
+++ b/.github/workflows/build-rp2040.yml
@@ -21,6 +21,8 @@ jobs:
           sudo apt install -y --no-install-recommends gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib srecord
       - name: Build
         run: |
+          # Fix Windows line endings (CRLF -> LF) for Python scripts
+          sed -i 's/\r$//' combine_uf2.py
           chmod +x combine_uf2.py
           mkdir build
           cd build
